objects/ContactWebProfile__c.object
<CustomObject>
    <fields>
        <fullName>CRDId__c</fullName>
        <description>CRD Id as entered by the contact via the website</description>
        <inlineHelpText>CRD Id as entered by the contact via the website</inlineHelpText>
        <label>CRD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>Company Name as entered by the contact via the website</description>
        <inlineHelpText>Company Name as entered by the contact via the website</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactIdCookieValue__c</fullName>
        <label>ContactIdCookieValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact for this Contact Web Profile</description>
        <inlineHelpText>Contact for this Contact Web Profile</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Web Profiles</relationshipLabel>
        <relationshipName>ContactWebProfiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email as entered by the contact via the website</description>
        <inlineHelpText>Email as entered by the contact via the website</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First Name as entered by the contact via the website</description>
        <inlineHelpText>First Name as entered by the contact via the website</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last Name as entered by the contact via the website</description>
        <inlineHelpText>Last Name as entered by the contact via the website</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotApprovedDatetime__c</fullName>
        <description>Datetime that this Contact Web Profile was set to Not Approved</description>
        <inlineHelpText>Datetime that this Contact Web Profile was set to Not Approved</inlineHelpText>
        <label>Not Approved Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NotApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The contact is not approved to access protected content via the website</description>
        <inlineHelpText>The contact is not approved to access protected content via the website</inlineHelpText>
        <label>Not Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone as entered by the contact via the website</description>
        <inlineHelpText>Phone as entered by the contact via the website</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RegistrationSource__c</fullName>
        <description>The initial source Contact Web Profile data when the person first signed up for access to website exclusive content (i.e., LinkedIn vs Website)</description>
        <inlineHelpText>The initial source Contact Web Profile data when the person first signed up for access to website exclusive content (i.e., LinkedIn vs Website)</inlineHelpText>
        <label>Registration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State as entered by the contact via the website</description>
        <inlineHelpText>State as entered by the contact via the website</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifiedDatetime__c</fullName>
        <description>Datetime that this Contact Web Profile was set to Verified</description>
        <inlineHelpText>Datetime that this Contact Web Profile was set to Verified</inlineHelpText>
        <label>Verified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the contact has verified their email address</description>
        <inlineHelpText>Indicates if the contact has verified their email address</inlineHelpText>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <description>Stores information collected by the Natixis website for access to FA exclusive content</description>
    <label>Contact Web Profile</label>
    <nameField>
        <displayFormat>CWP-{000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Web Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>